--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -4619,10 +4619,10 @@ msgstr "The users list has been exported."
 msgid "Download the file"
 msgstr "Download the file"
 
-msgid "Portal Administrator: Telephone"
+msgid "Portal Administrator: Phone number"
 msgstr "Portal Administrator: Telephone"
 
-msgid "The telephone number of the platform administrator"
+msgid "The phone number of the Platform Administrator (appears in the footer on the left)"
 msgstr "The telephone number of the platform administrator"
 
 msgid "Send mail to new user"
@@ -16799,7 +16799,7 @@ msgstr "The information about this course request is considered protected; it ca
 msgid "Courses validation"
 msgstr "Courses validation"
 
-msgid "When the \"Courses validation\" feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
+msgid "When the 'Courses validation' feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
 msgstr "When the \"Courses validation\" feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
 
 msgid "%s A request for additional information about the course request %s"
@@ -16823,7 +16823,7 @@ msgstr "To our regret we have to inform you that your course request %s has been
 msgid "Course validation - a link to the terms and conditions"
 msgstr "Course validation - a link to the terms and conditions"
 
-msgid "This is the URL to the \"Terms and Conditions\" document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's \"Terms and Conditions\" module and if you want its URL to be used, then leave this setting empty."
+msgid "This is the URL to the 'Terms and Conditions' document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's 'Terms and Conditions' module and if you want its URL to be used, then leave this setting empty."
 msgstr "This is the URL to the \"Terms and Conditions\" document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's \"Terms and Conditions\" module and if you want its URL to be used, then leave this setting empty."
 
 msgid "The course has not been created due to an internal error."
@@ -16883,7 +16883,7 @@ msgstr "The protocol string to prefix the Single Sign On server's domain (we rec
 msgid "WIRIS mathematical editor"
 msgstr "WIRIS mathematical editor"
 
-msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\" target=\"_blank\">PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href=\"http://www.wiris.com/store/who-pays\" target=\"_blank\">commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
+msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href='http://www.wiris.com/es/plugins3/ckeditor/download' target='_blank'>PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href='http://www.wiris.com/store/who-pays' target='_blank'>commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
 msgstr "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\" target=\"_blank\">PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href=\"http://www.wiris.com/store/who-pays\" target=\"_blank\">commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
 
 msgid "File export as"
@@ -17069,7 +17069,7 @@ msgstr "Male"
 msgid "Load the Mathjax library in all the system pages"
 msgstr "Load the Mathjax library in all the system pages"
 
-msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the \"Documents\" tool, but elsewhere in the system."
+msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the 'Documents' tool, but elsewhere in the system."
 msgstr "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the \"Documents\" tool, but elsewhere in the system."
 
 msgid "Hide tools from teachers"
@@ -25481,7 +25481,7 @@ msgstr "In multi-URL settings, allow admins and teachers to assign categories fr
 msgid "Hide courses block in the sidebar"
 msgstr "Hide courses block in the sidebar"
 
-msgid "When on screens where the left menu is visible, do not display the « Courses » section."
+msgid "When on screens where the left menu is visible, do not display the « Courses » section."
 msgstr "When on screens where the left menu is visible, do not display the « Courses » section."
 
 msgid "Allow using extra fields in course catalogue"
@@ -25523,7 +25523,7 @@ msgstr "The page the donation message should link to (full URL)."
 msgid "Type of link for the session title"
 msgstr "Type of link for the session title"
 
-msgid "On the courses/sessions page, the session title can be either of the following : 0 = no link (hide session title) ; 1 = link title to a special session page ; 2 = link to the course if there is only one course ; 3 = session title makes the courses list foldable ; 4 = no link (show session title)."
+msgid "On the courses/sessions page, the session title can be either of the following : 0 = no link (hide session title) ; 1 = link title to a special session page ; 2 = link to the course if there is only one course ; 3 = session title makes the courses list foldable ; 4 = no link (show session title)."
 msgstr "On the courses/sessions page, the session title can be either of the following : 0 = no link (hide session title) ; 1 = link title to a special session page ; 2 = link to the course if there is only one course ; 3 = session title makes the courses list foldable ; 4 = no link (show session title)."
 
 msgid "Hide course rating"
@@ -28093,3 +28093,24 @@ msgstr "Project manager"
 
 msgid "Select classes for which this course will be visible for subscription in the catalogue. Subscription rules still apply apart from it being visible in the catalogue."
 msgstr "Select classes for which this course will be visible for subscription in the catalogue. Subscription rules still apply apart from it being visible in the catalogue."
+
+msgid "Remove the checkbox to enable sending announcements"
+msgstr "Remove the checkbox to enable sending announcements"
+
+msgid "Remove the checkbox to enable sending announcements to users with HR roles (still requires to confirm in the announcements tool)."
+msgstr "Remove the checkbox to enable sending announcements to users with HR roles (still requires to confirm in the announcements tool)."
+
+msgid "Sets which user appears as the sender of agenda reminder emails."
+msgstr "Sets which user appears as the sender of agenda reminder emails."
+
+msgid "Enable Multi-Level Attendance Grading"
+msgstr "Enable Multi-Level Attendance Grading"
+
+msgid "Allows grading attendance with multiple levels instead of a simple present/absent system."
+msgstr "Allows grading attendance with multiple levels instead of a simple present/absent system."
+
+msgid "Show courses duration"
+msgstr "Show courses duration"
+
+msgid "Display the course duration next to the course title in the course catalogue and the courses list."
+msgstr "Display the course duration next to the course title in the course catalogue and the courses list."
