--- a/translations/messages.es.po
+++ b/translations/messages.es.po
@@ -4628,10 +4628,10 @@ msgstr "La lista de usuarios ha sido exportada."
 msgid "Download the file"
 msgstr "Haga clic aquí para descargar el archivo."
 
-msgid "Portal Administrator: Telephone"
+msgid "Portal Administrator: Phone number"
 msgstr "Administrador de la plataforma: teléfono"
 
-msgid "The telephone number of the platform administrator"
+msgid "The phone number of the Platform Administrator (appears in the footer on the left)"
 msgstr "Número de teléfono del administrador de la plataforma"
 
 msgid "Send mail to new user"
@@ -16811,7 +16811,7 @@ msgstr "La información de esta solicitud de formación es considerada como conf
 msgid "Courses validation"
 msgstr "Solicitud de cursos"
 
-msgid "When the \"Courses validation\" feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
+msgid "When the 'Courses validation' feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
 msgstr "Cuando la solicitud de cursos está activada, un profesor no podrá crear un curso por si mismo sino que tendrá que rellenar una solicitud. El administrador de la plataforma revisará la solicitud y la aprobará o rechazará. Esta funcionalidad se basa en mensajes de correo electrónico automáticos por lo que debe asegurarse de que su instalación de Chamilo usa un servidor de correo y una dirección de correo dedicada a ello."
 
 msgid "%s A request for additional information about the course request %s"
@@ -16835,7 +16835,7 @@ msgstr "Lamentamos informarle que la solicitud del curso %s ha sido rechazada de
 msgid "Course validation - a link to the terms and conditions"
 msgstr "Solicitud de cursos - enlace a términos y condiciones"
 
-msgid "This is the URL to the \"Terms and Conditions\" document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's \"Terms and Conditions\" module and if you want its URL to be used, then leave this setting empty."
+msgid "This is the URL to the 'Terms and Conditions' document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's 'Terms and Conditions' module and if you want its URL to be used, then leave this setting empty."
 msgstr "La URL que enlaza el documento \"Términos y condiciones\" que rige la solicitud de un curso. Si esta dirección está configurada, el usario tendrá que leer y aceptar los términos y condiciones antes de enviar su solicitud de curso. Si activa el módulo \"Términos y condiciones\" de Chamilo y quiere usar éste en lugar de términos y condiciones propias, deje este campo vacío."
 
 msgid "The course has not been created due to an internal error."
@@ -16895,7 +16895,7 @@ msgstr "Prefijo que indica el protocolo del dominio del servidor de Single Sign 
 msgid "WIRIS mathematical editor"
 msgstr "Editor matemático WIRIS"
 
-msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\" target=\"_blank\">PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href=\"http://www.wiris.com/store/who-pays\" target=\"_blank\">commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
+msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href='http://www.wiris.com/es/plugins3/ckeditor/download' target='_blank'>PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href='http://www.wiris.com/store/who-pays' target='_blank'>commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
 msgstr "Activar el editor matemático WIRIS. Instalando este plugin obtendrá WIRIS editor y WIRIS CAS. <br/>La activación no se realiza completamente si previamente no ha descargado el <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\" target=\"_blank\">PHP plugin for CKeditor de WIRIS</a> y descomprimido su contenido en el directorio de Chamilo main/inc/lib/javascript/ckeditor/plugins/ <br/>Esto es necesario debido a que Wiris es un software propietario y los servicios de Wiris son <a href=\"http://www.wiris.com/store/who-pays\" target=\"_blank\">comerciales</a>. Para realizar ajustes en el plugin edite el archivo configuration.ini o sustituya su contenido por el de configuration.ini.default que acompaña a Chamilo."
 
 msgid "File export as"
@@ -17095,7 +17095,7 @@ msgstr "Masculina"
 msgid "Load the Mathjax library in all the system pages"
 msgstr "Cargar la librería Mathjax para todas las páginas de la plataforma"
 
-msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the \"Documents\" tool, but elsewhere in the system."
+msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the 'Documents' tool, but elsewhere in the system."
 msgstr "Active este parámetro si desea mostrar fórmulas matemáticas basadas en MathML y gráficos matemáticos basados en ASCIIsvg, no solo en la herramienta \"Documentos\", pero también en otras herramientas de la plataforma."
 
 msgid "Hide tools from teachers"
@@ -25636,7 +25636,7 @@ msgstr ""
 "Añadir dinámicamente nuevos campos de búsqueda al catálogo de cursos basados "
 "en campos de perfil buscables de curso."
 
-msgid "When on screens where the left menu is visible, do not display the « Courses » section."
+msgid "When on screens where the left menu is visible, do not display the « Courses » section."
 msgstr ""
 "Cuando esté en pantallas donde el menú izquierdo es visible, no mostrar la "
 "sección «Cursos»."
@@ -25651,7 +25651,7 @@ msgstr ""
 "Añade un cuadro de mensaje en la página de creación de cursos para los "
 "profesores, pidiéndoles que donen al proyecto."
 
-msgid "On the courses/sessions page, the session title can be either of the following : 0 = no link (hide session title) ; 1 = link title to a special session page ; 2 = link to the course if there is only one course ; 3 = session title makes the courses list foldable ; 4 = no link (show session title)."
+msgid "On the courses/sessions page, the session title can be either of the following : 0 = no link (hide session title) ; 1 = link title to a special session page ; 2 = link to the course if there is only one course ; 3 = session title makes the courses list foldable ; 4 = no link (show session title)."
 msgstr ""
 "En la página de cursos/sesiones, el título de la sesión puede ser uno de los "
 "siguientes: 0 = sin enlace (ocultar título de la sesión); 1 = enlazar el "
