--- a/translations/messages.nl.po
+++ b/translations/messages.nl.po
@@ -4647,10 +4647,10 @@ msgstr "De gebruikerslijst is geëxporteerd."
 msgid "Download the file"
 msgstr "Klik hier om het bestand te downloaden."
 
-msgid "Portal Administrator: Telephone"
+msgid "Portal Administrator: Phone number"
 msgstr "Platformbeheerder: telefoonnummer"
 
-msgid "The telephone number of the platform administrator"
+msgid "The phone number of the Platform Administrator (appears in the footer on the left)"
 msgstr "Telefoonnummer van de platformbeheerder"
 
 msgid "Send mail to new user"
@@ -16893,7 +16893,7 @@ msgstr "De informatie over dit cursusverzoek is afgeschermd. Het mag enkel gebru
 msgid "Courses validation"
 msgstr "Cursusvalidering"
 
-msgid "When the \"Courses validation\" feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
+msgid "When the 'Courses validation' feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
 msgstr "Als de optie \"cursusvalidering\" ingeschakeld is, kan een onderwijzer zelf geen cursus aanmaken. Hij/zij moet een cursusverzoek invullen. De platformbeheerder zal de verzoeken evalueren en dan goed- of afkeuren.\nDeze functionaliteit maakt gebruik van automatische e-mail verzending. Zorg dat Chamilo geconfigureerd is met toegang tot een mailserver en beschikt over een exclusief e-mail adres."
 
 msgid "%s A request for additional information about the course request %s"
@@ -16917,7 +16917,7 @@ msgstr "Het spijt ons te moeten meedelen dat je cursusverzoek %s niet geacceptee
 msgid "Course validation - a link to the terms and conditions"
 msgstr "Cursusvalidering - link naar de algemene voorwaarden"
 
-msgid "This is the URL to the \"Terms and Conditions\" document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's \"Terms and Conditions\" module and if you want its URL to be used, then leave this setting empty."
+msgid "This is the URL to the 'Terms and Conditions' document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's 'Terms and Conditions' module and if you want its URL to be used, then leave this setting empty."
 msgstr "Deze URL leidt naar de \"Algemene Voorwaarden\" die van toepassing zijn als je een cursusverzoek wil indienen. Als hier een URL is ingevuld, zal deze gebruiker deze moeten lezen en goedkeuren als die een cursusverzoek wil indienen.\nAls je de \"Algemene Voorwaarden\" module in Chamilo gebruikt en je wil die URL gebruiken, laat dit veld dan leeg."
 
 msgid "The course has not been created due to an internal error."
@@ -16977,7 +16977,7 @@ msgstr "De protocol-prefix gebruikt door je Single Sign On server (we adviseren 
 msgid "WIRIS mathematical editor"
 msgstr "WIRIS wiskundige editor"
 
-msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\" target=\"_blank\">PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href=\"http://www.wiris.com/store/who-pays\" target=\"_blank\">commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
+msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href='http://www.wiris.com/es/plugins3/ckeditor/download' target='_blank'>PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href='http://www.wiris.com/store/who-pays' target='_blank'>commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
 msgstr "Schakel de WIRIS wikundige editor in. Door deze plugin te installeren, krijg je de WIRIS editor en de WIRIS CAS. De activering is pas compleet als ook de <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\">PHP plugin voor CKeditor WIRIS</a> gedownload en gedecomprimeerd is in de Chamilo map main/inc/lib/javascript/ckeditor/plugins/\nDit is noodzakelijk want WIRIS is gepatenteerd en de dienstverlening is <a href=\"http://www.wiris.com/store/who-pays\">commercieel</a>. Wil je wijzigingen aanbrengen aan deze plugin, bewerk dan configuration.ini of vervang de inhoud door de standaard configuration.ini die bij Chamilo geleverd wordt."
 
 msgid "File export as"
@@ -17163,7 +17163,7 @@ msgstr "Man"
 msgid "Load the Mathjax library in all the system pages"
 msgstr "Laad de Mathjax bibliotheek in alle systeempagina's"
 
-msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the \"Documents\" tool, but elsewhere in the system."
+msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the 'Documents' tool, but elsewhere in the system."
 msgstr "Activeer deze instelling als je MathML-gebaseerde wiskundige vormules en ASCIIsvg-gebaseerde afbeeldingen wil weergeven niet alleen in de documenttool, maar ook elders in het systeem."
 
 msgid "Hide tools from teachers"
@@ -29361,7 +29361,7 @@ msgstr "Agendakleurlegendes"
 msgid "Link global announcements with careers and promotions"
 msgstr "Koppel globale aankondigingen aan carrières en promoties"
 
-msgid "When on screens where the left menu is visible, do not display the « Courses » section."
+msgid "When on screens where the left menu is visible, do not display the « Courses » section."
 msgstr ""
 "Wanneer op schermen waar het linkermenu zichtbaar is, toon de sectie « "
 "Cursussen » niet."
@@ -29469,7 +29469,7 @@ msgstr "Forumcategorieën taalfilter"
 msgid "Minimum time to complete learning path"
 msgstr "Minimale tijd om de leerpad te voltooien"
 
-msgid "On the courses/sessions page, the session title can be either of the following : 0 = no link (hide session title) ; 1 = link title to a special session page ; 2 = link to the course if there is only one course ; 3 = session title makes the courses list foldable ; 4 = no link (show session title)."
+msgid "On the courses/sessions page, the session title can be either of the following : 0 = no link (hide session title) ; 1 = link title to a special session page ; 2 = link to the course if there is only one course ; 3 = session title makes the courses list foldable ; 4 = no link (show session title)."
 msgstr ""
 "Op de cursus/sessiepagina kan de sessietitel een van de volgende zijn: 0 = "
 "geen link (sessietitel verbergen); 1 = linktitel naar een speciale "
