--- a/translations/messages.pt.po
+++ b/translations/messages.pt.po
@@ -4623,10 +4623,10 @@ msgstr "A lista de utilizadores foi exportada."
 msgid "Download the file"
 msgstr "Download/descarregar o ficheiro"
 
-msgid "Portal Administrator: Telephone"
+msgid "Portal Administrator: Phone number"
 msgstr "Administrador do Portal: Telefone"
 
-msgid "The telephone number of the platform administrator"
+msgid "The phone number of the Platform Administrator (appears in the footer on the left)"
 msgstr "Número de telefone do administrador da plataforma"
 
 msgid "Send mail to new user"
@@ -16803,7 +16803,7 @@ msgstr "As informações desta petição do formação é considerada confidenci
 msgid "Courses validation"
 msgstr "Validação do cursos"
 
-msgid "When the \"Courses validation\" feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
+msgid "When the 'Courses validation' feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
 msgstr "Quando o petição é ativado cursos, um professor não pode criar um curso por si só, mas terá que preencher um requerimento. O administrador da plataforma irá rever o pedido e aprovar ou rejeitar. Esta funcionalidade é baseada em mensagens de e-mail automáticos para que você deve garantir que sua instalação Chamilo usa um servidor de email e um endereço de e-mail dedicado a ele."
 
 msgid "%s A request for additional information about the course request %s"
@@ -16827,7 +16827,7 @@ msgstr "Lamentamos que o pedido do curso% s foi rejeitada porque não está em c
 msgid "Course validation - a link to the terms and conditions"
 msgstr "Petição do cursos - link para termos e condições"
 
-msgid "This is the URL to the \"Terms and Conditions\" document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's \"Terms and Conditions\" module and if you want its URL to be used, then leave this setting empty."
+msgid "This is the URL to the 'Terms and Conditions' document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's 'Terms and Conditions' module and if you want its URL to be used, then leave this setting empty."
 msgstr "A URL que liga o documento 'Termos e Condições' que regem a aplicação de um curso. Se este endereço"
 
 msgid "The course has not been created due to an internal error."
@@ -16887,7 +16887,7 @@ msgstr "Prefixo que indica o domínio do servidor protocolo de Single Sign On (s
 msgid "WIRIS mathematical editor"
 msgstr "Editor matemática WIRIS"
 
-msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\" target=\"_blank\">PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href=\"http://www.wiris.com/store/who-pays\" target=\"_blank\">commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
+msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href='http://www.wiris.com/es/plugins3/ckeditor/download' target='_blank'>PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href='http://www.wiris.com/store/who-pays' target='_blank'>commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
 msgstr "Ativar WIRIS editor matemática. Ao instalar este plugin você começa WIRIS editor e WIRIS CAS. Activation <br/> não é completamente feito se você ainda não tiver baixado o <a href='http://www.wiris.com/es/plugins3/ckeditor/download' target='_ blank'>PHP plugin para CKeditor do WIRIS</a> e conteúdo diretório descompactado no Chamilo main/inc/lib/javascript/ckeditor/plugins/ <br/>Esta vontade é necessário porque WIRIS é software proprietário e serviços do WIRIS são <a href='http://www.wiris.com/store/who-pays' target='_blank'>comercial</a>. Para fazer ajustes para o plugin editar o arquivo configuration.ini ou substituir seu conteúdo com o de configuration.ini.default que acompanha Chamilo."
 
 msgid "File export as"
@@ -17073,7 +17073,7 @@ msgstr "Masculina"
 msgid "Load the Mathjax library in all the system pages"
 msgstr "Carregar a livraria MathJax em todas as páginas do plataforma"
 
-msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the \"Documents\" tool, but elsewhere in the system."
+msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the 'Documents' tool, but elsewhere in the system."
 msgstr "Active esta definição se você quer mostrar fórmulas matemáticas baseados em MathML e baseada ASCIIsvg gráficos matemáticos, não só no \"Documentos\" ferramenta, mas em outras partes do sistema."
 
 msgid "Hide tools from teachers"
