--- a/translations/messages.ro.po
+++ b/translations/messages.ro.po
@@ -4624,10 +4624,10 @@ msgstr "Lista utilizatorilor a fost exportata."
 msgid "Download the file"
 msgstr "Apasati aici pentru a descarca fisierul."
 
-msgid "Portal Administrator: Telephone"
+msgid "Portal Administrator: Phone number"
 msgstr "Administratorul platformei: Telefon"
 
-msgid "The telephone number of the platform administrator"
+msgid "The phone number of the Platform Administrator (appears in the footer on the left)"
 msgstr "Numarul de telefon al administratorului de platforma"
 
 msgid "Send mail to new user"
@@ -16804,7 +16804,7 @@ msgstr "Informatia acestei solicitari este considerata confidentiala,si intrucat
 msgid "Courses validation"
 msgstr "Solicitare de cursuri"
 
-msgid "When the \"Courses validation\" feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
+msgid "When the 'Courses validation' feature is enabled, a teacher is not able to create a course alone. He/she fills a course request. The platform administrator reviews the request and approves it or rejects it.<br />This feature relies on automated e-mail messaging; set Chamilo to access an e-mail server and to use a dedicated an e-mail account."
 msgstr "În cazul în care cererea de cursuri este activată, un profesor nu poate crea un curs de la sine, dar va trebui să completeze o cerere. Administratorul platformei va revizui cererea și o va aproba sau respinge. Această funcționalitate se bazează pe mesajele de e-mail automat așa că trebuie să se asigure că instalarea de Chamilo utilizează un server de mail și o adresă de e-mail dedicat acestuia."
 
 msgid "%s A request for additional information about the course request %s"
@@ -16828,7 +16828,7 @@ msgstr "Vrem sa le informam ca solicitarea cursului %s a fost respinsa deoarece 
 msgid "Course validation - a link to the terms and conditions"
 msgstr "Cerere de cursuri - link către termeni și condiții"
 
-msgid "This is the URL to the \"Terms and Conditions\" document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's \"Terms and Conditions\" module and if you want its URL to be used, then leave this setting empty."
+msgid "This is the URL to the 'Terms and Conditions' document that is valid for making a course request. If the address is set here, the user should read and agree with these terms and conditions before sending a course request.<br />If you enable Chamilo's 'Terms and Conditions' module and if you want its URL to be used, then leave this setting empty."
 msgstr " Chamilo și doriți să-l folosească în loc de modul termeni și termeni proprii, lăsați acest câmp gol."
 
 msgid "The course has not been created due to an internal error."
@@ -16888,7 +16888,7 @@ msgstr "Prefixul care indica protocolul de domeniu a serverul de Single Sign On 
 msgid "WIRIS mathematical editor"
 msgstr "Editor matematic WIRIS"
 
-msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href=\"http://www.wiris.com/es/plugins3/ckeditor/download\" target=\"_blank\">PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href=\"http://www.wiris.com/store/who-pays\" target=\"_blank\">commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
+msgid "Enable WIRIS mathematical editor. Installing this plugin you get WIRIS editor and WIRIS CAS.<br/>This activation is not fully realized unless it has been previously downloaded the <a href='http://www.wiris.com/es/plugins3/ckeditor/download' target='_blank'>PHP plugin for CKeditor WIRIS</a> and unzipped its contents in the Chamilo's directory main/inc/lib/javascript/ckeditor/plugins/.<br/>This is necessary because Wiris is proprietary software and his services are <a href='http://www.wiris.com/store/who-pays' target='_blank'>commercial</a>. To make adjustments to the plugin, edit configuration.ini file or replace his content by the file configuration.ini.default shipped with Chamilo."
 msgstr "].&#36;_configuration["
 
 msgid "File export as"
@@ -17074,7 +17074,7 @@ msgstr "Masculin"
 msgid "Load the Mathjax library in all the system pages"
 msgstr "Incarcati fisierul ASCIIMathML.js pentru toate paginile din plataforma"
 
-msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the \"Documents\" tool, but elsewhere in the system."
+msgid "Activate this setting if you want to show MathML-based mathematical formulas and ASCIIsvg-based mathematical graphics not only in the 'Documents' tool, but elsewhere in the system."
 msgstr "Activați aceast parametru dacă doriți să se afișeze formule matematice bazate pe ASCIIMathML si grafice matematice bazate in ASCIIsvg, nu numai în instrumentul \"Documente\", dar și în alte instrumente ale platformei."
 
 msgid "Hide tools from teachers"
